# MetricStore

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  cliff.toml  docker-compose.yml  mcp-server.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-please.yml  release.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
examples/: claude_desktop_config.json  dbt_sample.yml  sample_metrics.yaml
scripts/: quickstart.sh
src/metricstore/: __init__.py  auth.py  config.py  database.py  dependencies.py  main.py  mcp_server.py
src/metricstore/api/: __init__.py  collections.py  metrics.py
src/metricstore/exporters/: __init__.py  dbt_exporter.py  json_exporter.py  osi_exporter.py  yaml_exporter.py
src/metricstore/importers/: __init__.py  dbt_importer.py  yaml_importer.py
src/metricstore/models/: __init__.py  base.py  collection.py  metric.py  metric_collection.py  metric_version.py
src/metricstore/schemas/: __init__.py  collection.py  common.py  metric.py  version.py
src/metricstore/services/: __init__.py  collection_service.py  metric_service.py
tests/: conftest.py  test_api_collections.py  test_api_metrics.py  test_auth.py  test_collection_service.py  test_dbt_importer.py  test_importers.py  test_mcp.py
